Change margin on some elements to fix alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,6 @@ header {
   font-weight: bold;
   min-width: 300px;
   max-width: 300px;
-  border-right: none;
   padding: 13px;
   border: none;
   border-radius: 5px 0 0 5px;
@@ -79,7 +78,7 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  box-sizing: padding-box;
+  
 }
 
 /*****Main Section*****/
@@ -98,7 +97,7 @@ button {
 
 .weather-desc {
   font-size: 1.2rem;
-  margin: 0 0 -0.6rem 0;
+  margin: 0 0 -0.2rem 0;
   padding: 0 0 0 0.1rem;
 }
 
@@ -143,7 +142,7 @@ button {
 .time {
   font-size: 1.2rem;
   padding: 0 0 0 0.2rem;
-  margin: -0.5rem 0 0 0;
+  margin: -0.2rem 0 0 0;
 }
 
 .icon-container {
